--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "webpack --mode production",
-    "start-dev": "webpack serve --mode development --open"
+    "build": "webpack --mode production",
+    "start": "webpack serve --mode development --open"
   },
   "keywords": [],
   "author": "",
